# pedalkernel

./: .gitattributes  .gitignore  ANALYSIS-modeling-gaps.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DSL.md  LICENSE  README.md  ROADMAP.md  plan.md
pedalkernel/: Cargo.toml
pedalkernel-layout/: Cargo.toml
pedalkernel-layout/src/: graph.rs  groups.rs  kicad.rs  layering.rs  lib.rs  optimize.rs  placement.rs  routing.rs  symbols.rs  types.rs
pedalkernel-layout/tests/: integration.rs
pedalkernel-validate/: .gitignore  Cargo.toml
pedalkernel-validate/circuits/active/: fuzz_face_pnp.pedal  jfet_source_follower.pedal  nmos_common_source.pedal  npn_common_emitter.pedal  optical_attenuator.pedal  ota_ca3080.pedal  phase_allpass_stage.pedal  pmos_source_follower.pedal  pnp_common_emitter.pedal  push_pull_6l6.pedal
pedalkernel-validate/circuits/linear/: rc_highpass.pedal  rc_lowpass.pedal  resistor_divider.pedal  rl_lowpass.pedal
pedalkernel-validate/circuits/nonlinear/: common_cathode_12ax7.pedal  diode_clipper.pedal  diode_no_cap.pedal  single_diode.pedal  zener_clipper.pedal
pedalkernel-validate/circuits/opamp/: difference_amp.pedal  integrator.pedal  inverting_gain10.pedal  noninverting_gain10.pedal  summing_inverting.pedal  unity_buffer.pedal
pedalkernel-validate/circuits/pedals/: bigmuff_stage.pedal  fuzz_core.pedal  rat_clipper.pedal  ts808_clipper.pedal
pedalkernel-validate/circuits/reactive/: delay_simple.pedal  lc_resonant.pedal  transformer_stepdown.pedal  transformer_stepup.pedal
pedalkernel-validate/golden/active/fuzz_face_pnp/: clean.npy  saturated.npy
pedalkernel-validate/golden/active/jfet_source_follower/: sine.npy
pedalkernel-validate/golden/active/nmos_common_source/: sine.npy
pedalkernel-validate/golden/active/npn_common_emitter/: clean.npy  driven.npy
pedalkernel-validate/golden/active/optical_attenuator/: sine.npy
pedalkernel-validate/golden/opamp/integrator/: sine.npy
pedalkernel-validate/spice-circuits/active/: fuzz_face_pnp.spice  jfet_source_follower.spice  nmos_common_source.spice  npn_common_emitter.spice  optical_attenuator.spice  ota_ca3080.spice  phase_allpass_stage.spice  pmos_source_follower.spice  pnp_common_emitter.spice  push_pull_6l6.spice
pedalkernel-validate/spice-circuits/linear/: rc_highpass.spice  rc_lowpass.spice  resistor_divider.spice  rl_lowpass.spice
pedalkernel-validate/spice-circuits/nonlinear/: common_cathode_12ax7.spice  diode_clipper.spice  diode_no_cap.spice  single_diode.spice  zener_clipper.spice
pedalkernel-validate/spice-circuits/opamp/: difference_amp.spice  integrator.spice  inverting_gain10.spice  noninverting_gain10.spice  summing_inverting.spice  unity_buffer.spice
pedalkernel-validate/spice-circuits/pedals/: bigmuff_stage.spice  fuzz_core.spice  rat_clipper.spice  ts808_clipper.spice
pedalkernel-validate/spice-circuits/reactive/: delay_simple.spice  lc_resonant.spice  transformer_stepdown.spice  transformer_stepup.spice
pedalkernel-validate/src/: analytical.rs  config.rs  lib.rs  main.rs  metrics.rs  npy.rs  report.rs  runner.rs  signals.rs  spice.rs
pedalkernel-validate/tests/: debug_reactive.rs  debug_resistor_divider.rs  debug_single_diode.rs  debug_triode.rs
pedalkernel-vst/: Cargo.toml  DESIGN-UI.md  build.rs
pedalkernel-vst/src/: lib.rs  pedalboard.rs
pedalkernel-vst/src/editor/: mod.rs  skin.rs
pedalkernel-vst/ui/: ui_manifest.schema.json
pedalkernel/benches/: wdf_bench.rs
pedalkernel/examples/: bassman_5f6a.pedal  bjt_model_compare.rs  blues_rig.board  direct_wdf.rs  dyna_comp.pedal  dyna_comp.pedalhw  fulltone_ocd.pedal  fuzz_face.pedal  fuzz_face.pedalhw  fuzzface.rs  klon_centaur.pedal  klon_centaur.pedalhw  noise_suppressor.pedal  overdrive.rs  parse_pedal.rs  process.rs  proco_rat.pedalhw  tube_screamer.pedal  tube_screamer.pedalhw  tui.rs
pedalkernel/examples/amps/: bassman_5f6a.pedal  marshall_jtm45.pedal  tweed_deluxe_5e3.pedal
pedalkernel/examples/boards/: blues_rig.board  grunge_board.board  tweed_fx_loop.board
pedalkernel/examples/global_example/: .global.board  blues_rig.board
pedalkernel/examples/synths/: cem3340_vco.pedal  minisynth.pedal  moog_ladder_vcf.pedal
pedalkernel/models/: jfets.model  pentodes.model  transistors.model  triodes.model
pedalkernel/src/: board.rs  compiler.rs  config.rs  debug.rs  dsl.rs  elements.rs  hw.rs  kicad.rs  lib.rs  loading.rs  main.rs  metering.rs  models.rs  oversampling.rs  pedalboard.rs  pedals.rs  thermal.rs  tolerance.rs  tree.rs  wav.rs
pedalkernel/src/cli/: board_tui.rs  folder_tui.rs  mod.rs  models.rs  pedal_folder_tui.rs  process.rs  tui.rs  tui_widgets.rs  validate.rs
pedalkernel/src/compiler/: bind.rs  build.rs  classify.rs  compile.rs  compiled.rs  dyn_node.rs  graph.rs  helpers.rs  mod.rs  opamp_analysis.rs  plan.rs  split.rs  stage.rs  tests.rs  validate.rs  warnings.rs
pedalkernel/src/elements/: allpass.rs  controlled.rs  linear.rs  mod.rs  modulation.rs  nonlinear.rs  synth.rs
pedalkernel/tests/: audio_analysis.rs  bbd_artifacts.rs  gain_investigation.rs  integration_bbd.rs  integration_bjt.rs  integration_capacitor.rs  integration_clipping.rs  integration_compressor.rs  integration_engine.rs  integration_lfo.rs  integration_opamp_jfet.rs  integration_pedals.rs  integration_tubes.rs
pedalkernel/tests/test_pedals/: bbd_chorus.pedal  bbd_fast_clock.pedal  bbd_long_delay.pedal  bjt_2n2222.pedal  bjt_2n3904.pedal  bjt_2n3906.pedal  bjt_2n5088.pedal  bjt_2n5089.pedal  bjt_ac128.pedal  bjt_bc108.pedal  bjt_bc109.pedal  bjt_nkt275.pedal  bjt_oc44.pedal  cap_da.pedal  cap_ideal_reference.pedal  cap_leaky.pedal  clip_asymmetric.pedal  clip_germanium.pedal  clip_led.pedal  clip_silicon.pedal  clip_zener.pedal  ehx_memory_man.pedal  envelope_follower.pedal  jfet_allpass.pedal  jfet_switch.pedal  lfo_modulated_jfet.pedal  lfo_sine.pedal  lfo_square.pedal  lfo_triangle.pedal  opamp_buffer.pedal  opamp_gain.pedal  opamp_slew.pedal  ota_ca3080.pedal  pentode_5881.pedal  pentode_6267.pedal  pentode_6550.pedal  pentode_6973.pedal  pentode_6aq5a.pedal  pentode_6bq5.pedal  pentode_6ca7.pedal  (+21 more)
(+109 files in other folders)
