[package]
name = "pedalkernel"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "Rust WDF kernel for FX pedals"
license = "MIT"
repository = "https://github.com/ajmwagar/pedalkernel"
keywords = ["audio", "dsp", "wdf", "guitar", "effects"]
categories = ["multimedia::audio"]
rust-version = "1.75"

[dependencies]
# Audio I/O
jack = "0.11"

# Math
num-complex = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wdf_bench"
harness = false
