[package]
name = "pedalkernel"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "Rust WDF kernel for FX pedals — DSL → WDF → audio"
license = "MIT"
repository = "https://github.com/ajmwagar/pedalkernel"
keywords = ["audio", "dsp", "wdf", "guitar", "effects"]
categories = ["multimedia::audio"]
rust-version = "1.75"

[dependencies]
# DSL parser
nom = "7"

# Audio output (WAV)
hound = "3.5"

# Math
num-complex = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wdf_bench"
harness = false
