[package]
name = "pedalkernel-layout"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "Automatic schematic layout engine for PedalKernel .pedal circuits"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ajmwagar/pedalkernel"
keywords = ["audio", "schematic", "layout", "kicad", "circuit"]
categories = ["multimedia::audio"]
rust-version = "1.75"

[dependencies]
pedalkernel = { path = "../pedalkernel", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pedalkernel = { path = "../pedalkernel", default-features = false }
