[package]
name = "pedalkernel-validate"
version = "0.1.0"
edition = "2021"
description = "SPICE validation harness for PedalKernel WDF compiler"
license = "AGPL-3.0-or-later"

[dependencies]
pedalkernel = { path = "../pedalkernel" }

# FFT for spectral analysis
rustfft = "6.2"
realfft = "3.3"

# NumPy file I/O
ndarray = "0.15"
ndarray-npy = "0.8"

# Config and reporting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Progress and formatting
indicatif = "0.17"
tabled = "0.15"
colored = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SPICE integration
tempfile = "3.10"

[dev-dependencies]
approx = "0.5"
