[package]
name = "pedalkernel-vst"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "VST3/CLAP plugin wrapper for the PedalKernel WDF engine"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Embed ALL pro pedals from the private pedalkernel-pro repo (sibling directory).
# Build will fail if ~/src/pedalkernel-pro is not checked out.
pro-pedals = ["pro-guitar", "pro-bass"]
# Guitar-only variant: guitar overdrives/fuzz/wah + shared (delay, mod, comp).
pro-guitar = []
# Bass-only variant: bass-specific pedals + shared (delay, mod, comp).
pro-bass = []

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
pedalkernel = { path = "../pedalkernel", default-features = false }
