[package]
name = "pedalkernel-vst"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "VST3/CLAP plugin wrapper for the PedalKernel WDF engine"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Embed ALL pro pedals from the private pedalkernel-pro repo (sibling directory).
# Build will fail if ~/src/pedalkernel-pro is not checked out.
pro-pedals = ["pro-guitar", "pro-bass", "pro-amps", "pro-synth", "pro-ui"]
# Guitar-only variant: guitar overdrives/fuzz/wah + shared (delay, mod, comp).
pro-guitar = []
# Bass-only variant: bass-specific pedals + shared (delay, mod, comp).
pro-bass = []
# Amp models only (Vox AC15, Fender, Marshall, etc.)
pro-amps = []
# Synthesizer patches (VCO/VCF/VCA-based instruments)
pro-synth = []
# Custom WGPU-based UI (Pro only)
pro-ui = ["dep:pedalkernel-ui"]
# 6-slot pedalboard mode (exports PedalboardPlugin instead of PedalKernelPlugin)
pro-pedalboard = ["pro-ui"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
pedalkernel = { path = "../pedalkernel", default-features = false }
atomic_float = "1.0"
crossbeam = "0.8"

# Pro UI (optional, feature-gated)
pedalkernel-ui = { path = "../../pedalkernel-pro/pedalkernel-ui", optional = true }
