[package]
name = "pedalkernel"
version = "0.1.0"
edition = "2021"
authors = ["Avery Wagar <ajmwagar@gmail.com>"]
description = "Rust WDF kernel for FX pedals — DSL → WDF → audio"
license = "MIT"
repository = "https://github.com/ajmwagar/pedalkernel"
keywords = ["audio", "dsp", "wdf", "guitar", "effects"]
categories = ["multimedia::audio"]
rust-version = "1.75"

[features]
default = ["jack-rt", "tui", "cli"]
jack-rt = ["jack"]
tui = ["dep:ratatui", "dep:crossterm"]
cli = ["dep:clap"]

[dependencies]
# DSL parser
nom = "7"

# Audio I/O
jack = { version = "0.11", optional = true }
hound = "3.5"
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# Math
num-complex = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wdf_bench"
harness = false

[[bin]]
name = "pedalkernel"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "tui"
required-features = ["tui"]

[[example]]
name = "process"
